--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
@@ -21,6 +22,7 @@
   "dependencies": {
     "cron": "^4.3.3",
     "dotenv": "^17.2.1",
-    "env-var": "^7.4.0"
+    "env-var": "^7.4.0",
+    "nodemailer": "^7.0.5"
   }
 }
