--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,13 @@ MAILER_SECRET_KEY=
 
 
 PROD=false
+
+MONGO_URL=mongodb://richard:123456@localhost:27017
+MONGO_DB_NAME=NOC
+MONGO_USER=richard
+MONGO_PASS=123456
+
+POSTGRES_URL=postgres://postgres:123456@localhost:5432/NOC
+POSTGRES_USER=postgres
+POSTGRES_DB=NOC
+POSTGRES_PASSWORD=123456
