--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "devDependencies": {
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
+    "prisma": "^6.14.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "cron": "^4.3.3",
     "dotenv": "^17.2.1",
     "env-var": "^7.4.0",
+    "mongoose": "^8.18.0",
     "nodemailer": "^7.0.5"
   }
 }
